2023-08-16T00:34:19Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5873206664 # 1820
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-16
* notice: last 14d: unq all: 76 141
* notice: prev accum: outdated-unq outdated-all / unq all: 1446 4888 / 1544 5028
* notice: next accum: outdated-unq outdated-all / unq all: 1446 4888 / 1544 5029
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +8 +10 -0 -0 / 8 10
* notice: removed / changed dates: [] / [2023-08-15]

2023-08-15T16:09:17Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5869204247 # 1819
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-15
* notice: last 14d: unq all: 76 140
* notice: prev accum: outdated-unq outdated-all / unq all: 1446 4888 / 1542 5026
* notice: next accum: outdated-unq outdated-all / unq all: 1446 4888 / 1544 5028
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +8 +9 -0 -0 / 8 9
* notice: removed / changed dates: [] / [2023-08-15]

2023-08-15T08:09:44Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5865007941 # 1818
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-15
* notice: last 14d: unq all: 74 138
* notice: prev accum: outdated-unq outdated-all / unq all: 1446 4888 / 1536 5019
* notice: next accum: outdated-unq outdated-all / unq all: 1446 4888 / 1542 5026
* notice: prev exec diff / last date diff / accum: unq all: +6 +7 -0 -0 / +6 +7 -0 -0 / 6 7
* notice: removed / changed dates: [] / [2023-08-15]

2023-08-15T00:34:44Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5862162020 # 1817