@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-08-16T00:34:19Z",
+  "timestamp" : "2023-08-16T08:09:54Z",
   "count_outdated" : 4888,
   "uniques_outdated" : 1446,
-  "count" : 5029,
-  "uniques" : 1544,
+  "count" : 5030,
+  "uniques" : 1545,
   "clones" : [
     {
       "timestamp": "2023-08-02T00:00:00Z",
@@ -121,6 +121,15 @@
       "uniques": 8,
       "uniques_minmax": [ 6, 8 ],
       "uniques_decinc": [ 0, 8 ]
+    },
+    {
+      "timestamp": "2023-08-16T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
