@@ -1,5 +1,5 @@
 {
-  "count": 141,
+  "count": 142,
   "uniques": 76,
   "clones": [
     {
@@ -66,6 +66,11 @@
       "timestamp": "2023-08-15T00:00:00Z",
       "count": 10,
       "uniques": 8
+    },
+    {
+      "timestamp": "2023-08-16T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
